--- a/index-admin-gsg.html
+++ b/index-admin-gsg.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TechGuard Personas | admin</title>
+  <title>GoogleSigninUsers | Admin </title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jwt-decode/3.1.2/jwt-decode.min.js"></script>
   <link href="css/calendar.css" type="text/css" rel="stylesheet">
@@ -87,7 +87,7 @@
 <body>
 	
   <header>
-    <h3>Tech Guard Pro Google Signin - Personas | Panel administración</h3>
+    <h3>Google Signin Users | Panel de Administración</h3>
     <div id="g_id_onload"
      data-client_id="980822676255-vntch0t28qbesul2bp5oc1galtoi8a97.apps.googleusercontent.com"
      data-callback="handleCredentialResponse"
