--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TechGuard PRO | admin</title>
+  <title>Google Signin Users Admin</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jwt-decode/3.1.2/jwt-decode.min.js"></script>
      <!-- Agrega los scripts necesarios para Bootstrap y tu código JavaScript -->
@@ -74,7 +74,7 @@
 <body>
   <header>
     <!-- Aquí puedes incluir tu título y menú -->
-    <h3>Tech Guard PRO Google Signin Users | Admin</h3>
+    <h3>Google Signin Users | Admin</h3>
     <nav>
       <ul>
 	      <li><h4 class="mb-3"></h4></li>
@@ -215,7 +215,7 @@ $('#agregarModal').on('shown.bs.modal', function () {
 async function obtenerProductos() {
       try {
         // const response = await fetch('https://23913d9f-9a23-4b9c-9311-875072a4c064-00-3b5jrh193tc3d.kirk.replit.dev/tercerosFromGraphQL');
-        const response =  await fetch('https://pf87f6-3000.csb.app/GoogleSigninUsersFromGraphQL');
+        const response =  await fetch('https://23913d9f-9a23-4b9c-9311-875072a4c064-00-3b5jrh193tc3d.kirk.replit.dev/getAllGoogleSigninUsers');
 	if (!response.ok) {
           throw new Error('Error en la solicitud');
         }
@@ -279,7 +279,7 @@ document.addEventListener("DOMContentLoaded", async () => {
   async function agregarNuevoRegistro(registro){
         try {
             //const response = await fetch('https://23913d9f-9a23-4b9c-9311-875072a4c064-00-3b5jrh193tc3d.kirk.replit.dev/postOneTercero', {
-            const response = await fetch('https://pf87f6-3000.csb.app/postOneGoogleSigninUser', {
+            const response = await fetch('https://23913d9f-9a23-4b9c-9311-875072a4c064-00-3b5jrh193tc3d.kirk.replit.dev/postOneGoogleSigninUser', {
             method: 'POST',
             headers: {
               'Content-Type': 'application/json',
@@ -345,7 +345,7 @@ document.addEventListener("DOMContentLoaded", async () => {
     async function modificarRegistro(registro){
         try { console.log(registro)
             //const response = await fetch('https://23913d9f-9a23-4b9c-9311-875072a4c064-00-3b5jrh193tc3d.kirk.replit.dev/postOneTercero', {
-            const response = await fetch('https://pf87f6-3000.csb.app/updateOneGoogleSigninUser', {
+            const response = await fetch('https://23913d9f-9a23-4b9c-9311-875072a4c064-00-3b5jrh193tc3d.kirk.replit.dev/updateOneGoogleSigninUser', {
             method: 'POST',
             headers: {
               'Content-Type': 'application/json',
