--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
 </head>
 <body>
   <header>
-    <h3>TableCRUD</h3>
+    <h3>mappi</h3>
     <nav>
       <ul>
-	      <li><h4 class="mb-3"></h4></li>
+	<li><h4 class="mb-3"></h4></li>
       </ul> 
     </nav>
   </header>
