--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
 <body>
   <header>
     <h3>mappi</h3>
-    <nav>
+    <!-- <nav>
       <ul>
 	<li><h4 class="mb-3"></h4></li>
       </ul> 
-    </nav>
+    </nav> -->
   </header>
 	
   <div id="g_id_onload"
