--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     }
 
     header {
-      background-color: #333; /* Color de fondo del encabezado */
+      background-color: #066445; /* Color de fondo del encabezado */
       color: #fff; /* Color del texto en el encabezado */
       padding: 10px;
       text-align: center;
@@ -54,7 +54,8 @@
 	    font-size: 20px;
     }
     h3{
-       margin-top: 0px;
+       margin-top: 6px;
+       font-weight: bold;
     }
     .container{
       margin-top: -25px;
@@ -103,7 +104,7 @@
 </head>
 <body>
   <header>
-    <h3>mappi</h3>
+    <h3 >mappi</h3>
     <!-- <nav>
       <ul>
 	<li><h4 class="mb-3"></h4></li>
