--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@
            });
      }
 
-     socket.on('load_init_on', function(msg){
+    /* socket.on('load_init_on', function(msg){
             console.log(msg);
-     });
+     }); */
   </script>
 	
 </body>
