--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         	var gsignin = document.querySelector(".g_id_signin");
         	gsignin.style.display = "none";
         	// Llama a la función para obtener y mostrar los datos del tercero
-        	obtenerYMostrarTerceros();
+        	obtenerOneTercero();
     	   }
         }
         function decodeJwtResponse(token) {
