--- a/index.html
+++ b/index.html
@@ -3,74 +3,61 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mappi</title>
+  <title>Refactorii Google Signin Users | Pagos</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/jwt-decode/3.1.2/jwt-decode.min.js"></script>
-     <!-- Agrega los scripts necesarios para Bootstrap y tu código JavaScript -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
-  <style>
-     html, body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-    }
-     .container {
-       width: 100%;
-     }
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jwt-decode/3.1.2/jwt-decode.min.js"></script>
+  <link href="css/calendar.css" type="text/css" rel="stylesheet">
+  <script type="text/javascript" src="js/calendar.js"></script>
+<style>
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 
-    header {
-      background-color: #066445; /* Color de fondo del encabezado */
-      color: #fff; /* Color del texto en el encabezado */
-      padding: 10px;
-      text-align: center;
-    }
+header, footer {
+  background-color: #efefef;
+  color: #1174ba; /* Ajusta el color del texto para que sea visible en el fondo */
+  padding: 10px;
+  text-align: center;
+  margin-top: -24px;
 
-    nav {
-      display: flex; /* Establecer el contenedor de navegación como un contenedor flex */
-      justify-content: center; /* Centrar los elementos horizontalmente */
-      background-color: #555; /* Color de fondo del menú */
-    }
+}
 
-    nav ul {
-      list-style: none; /* Eliminar los estilos de lista (viñetas) */
-      margin: 0;
-      padding: 0;
-    }
+.container {
+  flex: 1;
+  max-width: 100%;
+  overflow: hidden;
+  box-sizing: border-box; /* Asegura que el padding del encabezado no afecte el ancho total */
+  padding-top: 23px; /* Mueve el contenido hacia abajo para evitar el solapamiento con el encabezado */
+}
 
-    nav ul li {
-      display: inline-block; /* Mostrar los elementos de lista en línea */
-      margin-right: 10px; /* Espaciado entre elementos de lista */
-    }
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 32px auto;
+  margin-top: 15px;
+}
 
-    nav ul li a {
-      text-decoration: none; /* Eliminar la decoración de texto (subrayado) en los enlaces */
-      color: #fff; /* Color del texto en los enlaces del menú */
-    }
-    .mb-3{
-	    color: #ffffff
-	    font-size: 20px;
-    }
-    h3{
-       margin-top: 6px;
-       font-weight: bold;
-    }
-    .container{
-      margin-top: -25px;
-    }
-  </style>
+footer {
+  font-weight: bold;
+  padding: 32px;
+}
+h4{
+  font-size: 20px;
+  text-align: center;
+  color: gray;
+  margin-top: -40px;
+}
+</style>
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script>
-	let usuario = "";
-	let terceros = "";
-	function handleCredentialResponse(response) {
+       function handleCredentialResponse(response) {
            // decodeJwtResponse() is a custom function defined by you
            // to decode the credential response.
            const responsePayload = decodeJwtResponse(response.credential);
@@ -80,122 +67,121 @@
            console.log('Family Name: ' + responsePayload.family_name);
            console.log("Image URL: " + responsePayload.picture);
            console.log("Email: " + responsePayload.email);
-	   localStorage.setItem("usuario", JSON.stringify(responsePayload.email));
-  	   // Obtén el usuario almacenado en localStorage
-           usuario = JSON.parse(localStorage.getItem("usuario"));
-  	   // Verifica si el usuario existe antes de intentar mostrarlo
-           if (usuario && responsePayload.email) {
-        	// Actualiza el contenido del elemento h3 con el usuario
-        	const h3Element = document.querySelector(".mb-3");
-        	h3Element.textContent = `| Listado Pagos | Usuario: ${usuario}`;
-        	// Muestra la tabla y oculta el botón de Google Sign-In
-        	var tabla = document.querySelector(".table");
-        	tabla.style.display = "block";
-        	var gsignin = document.querySelector(".g_id_signin");
-        	gsignin.style.display = "none";
-        	// Llama a la función para obtener y mostrar los datos del tercero
-        	obtenerYMostrarTerceros();
-    	   }
+           const email = responsePayload.email;
+           getUserByEmail(email);
+           const FullName = responsePayload.name;
+	   const GivenName = responsePayload.given_name;
+	   const FamilyName = responsePayload.family_name;
+           const timestampHoy = new Date().getTime();
+           const fechaHoy = new Date(timestampHoy);
+           const year = '1970';
+           const month = '01';
+           const day = '01';
+           const FechaIngreso = `${year}-${month}-${day}`;	   
+           const ImageURL = responsePayload.picture;
+	   const Email = responsePayload.email;
+	   const formData = {
+	      FullName,
+	      GivenName,
+	      FamilyName,
+	      FechaIngreso,
+	      ImageURL,
+	      Email
+	   };
+           localStorage.setItem("formData", JSON.stringify(formData));     
+      }
+
+      function decodeJwtResponse(token) {
+         var base64Url = token.split('.')[1];
+         var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+         var jsonPayload = decodeURIComponent(window.atob(base64).split('').map(function(c) {
+           return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+         }).join(''));
+         return JSON.parse(jsonPayload);
+      }
+
+      async function getUserByEmail(email) {
+    		try {
+                      const response = await fetch(`https://www.refactorii.com/getOneGoogleSigninUser/${email}`, {
+            		method: 'GET',  // Use GET method for passing data in the URL
+            		headers: {
+                	   'Content-Type': 'application/json',
+            		},
+       		   });
+                   if (!response.ok) {
+                     const formData = JSON.parse(localStorage.getItem("formData"));
+                     const nuevoRegistro = await agregarNuevoRegistro(formData);
+                     if (nuevoRegistro) {
+                       console.log('Registro creado exitosamente:', nuevoRegistro);
+                       window.location.href = '/courses';
+                     } else {
+                       console.error('Error al crear el registro.');
+                     }
+                     return null;
+                  } else {
+                    const data = await response.json();
+                    if (data.GoogleSigninUser) {
+                       window.location.href = '/courses';
+                       return data.GoogleSigninUser;
+                    } else {
+                      return null;
+                    }
+                  }                
+              } catch (error) {
+                   console.error('Error:', error);
+                   return null;
+                }
         }
-        function decodeJwtResponse(token) {
-           var base64Url = token.split('.')[1];
-           var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
-           var jsonPayload = decodeURIComponent(window.atob(base64).split('').map(function(c) {
-              return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
-           }).join(''));
-           return JSON.parse(jsonPayload);
-        }    
-    </script>
+
+        async function agregarNuevoRegistro(registro){
+         try {
+            const response = await fetch('https://www.refactorii.com/postOneGoogleSigninUser', {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(registro),
+          });
+          if (!response.ok) {
+            throw new Error('Error en la solicitud');
+          }
+          const data = await response.json();
+          return data.GoogleSigninUser; // Ajusta según la respuesta real del servidor
+         } catch (error) {
+          console.error('Error:', error);
+          return null;
+         }
+        }
+
+  </script>
 </head>
 <body>
+<div class="container">
   <header>
-    <h3 >mappi</h3>
-    <nav>
-      <ul>
-	<li><h4 class="mb-3"></h4></li>
-      </ul> 
-    </nav>
-  </header>
-	
-  <div id="g_id_onload"
+    <div id="g_id_onload"
      data-client_id="980822676255-vntch0t28qbesul2bp5oc1galtoi8a97.apps.googleusercontent.com"
      data-callback="handleCredentialResponse"
      data-context="use"
      data-ux_mode="popup"
      data-auto_select="true"
-     data-itp_support="true" style="padding: 20px;">
-  </div>
-  <div class="g_id_signin"
+     data-itp_support="true">
+    </div>
+    <div class="g_id_signin"
      data-type="standard"
      data-shape="rectangular"
      data-theme="outline"
      data-text="signin_with"
      data-size="large"
-     data-logo_alignment="left" style="padding-left: 20px;">
-  </div>
-	
-  <div class="container mt-5">
+     data-logo_alignment="left">
+    </div>
+  </header>
 
-    <table class="table" style="display: none">
-      <thead>
-        <tr style="background: #a2baf4; font-size: 9px;">
-         <th scope="col">FullName</th>
-          <th scope="col">GivenName</th>
-          <th scope="col">FamilyName</th>
-          <th scope="col">Fecha Ingreso</th>
-          <th scope="col">ImageURL</th>
-          <th scope="col">Email</th>
-          <th scope="col"></th>
-        </tr>
-      </thead>
-      <tbody class="contenedor">
-        <!-- Aquí se mostrarán los registros -->
-      </tbody>
-    </table>
-  </div>
-  <script>
-   async function obtenerOneTercero() {
-      usuario = JSON.parse(localStorage.getItem("usuario"));	   
-      const url = 'https://23913d9f-9a23-4b9c-9311-875072a4c064-00-3b5jrh193tc3d.kirk.replit.dev/getOneGoogleSigninUser/' + usuario;
-      try {
-        const response = await fetch(url);
-        if (!response.ok) {
-          throw new Error('Error en la solicitud');
-        }
-        const data = await response.json();
-        if (data && data.tercero) {
-	   return data.tercero; // Devolver un array con el tercero
-	} else {
-	   throw new Error('No se encontró el tercero en los datos obtenidos');
-	}
-      } catch (error) {
-        console.error('Error:', error);
-        return [];
-      }
-    }
-
-    //document.addEventListener("DOMContentLoaded", async () => {
-   async function obtenerYMostrarTerceros() {
-      terceros = await obtenerOneTercero();
-      const contenedor = document.querySelector(".contenedor");
-      let productosHTML = "";
-      terceros.forEach((tercero) => {
-        localStorage.setItem("usuario", JSON.stringify(tercero));
-        productosHTML += `
-          <tr style="border: 1px solid #80808078">
-            <td>${GoogleSigninUser.FullName}</td>
-            <td>${GoogleSigninUser.GivenName}</td>
-            <td>${GoogleSigninUser.FamilyName}</td>
-            <td>${GoogleSigninUser.FechaIngreso}</td>
-            <td>${GoogleSigninUser.ImageURL}</td>
-            <td>${GoogleSigninUser.Email}</td>
-          </tr>
-        `;
-      });
-      contenedor.innerHTML = productosHTML;
-    //)};
-    };
-	  
-  </script>
+  <img src="image_googlesignin_refactorii.png">
+  <h4></h4>
+</div>
+<footer>
+    <!-- Contenido del pie de página -->
+    Refactorii@2024
+  </footer>
 </body>
 </html>
