--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Refactorii Google Signin Users | Pagos</title>
+  <title>Refactorii Google Signin Users </title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jwt-decode/3.1.2/jwt-decode.min.js"></script>
   <link href="css/calendar.css" type="text/css" rel="stylesheet">
@@ -102,7 +102,7 @@ h4{
 
       async function getUserByEmail(email) {
     		try {
-                      const response = await fetch(`https://www.refactorii.com/getOneGoogleSigninUser/${email}`, {
+                      const response = await fetch(`https://23913d9f-9a23-4b9c-9311-875072a4c064-00-3b5jrh193tc3d.kirk.replit.dev/getOneGoogleSigninUser/${email}`, {
             		method: 'GET',  // Use GET method for passing data in the URL
             		headers: {
                 	   'Content-Type': 'application/json',
@@ -121,7 +121,7 @@ h4{
                   } else {
                     const data = await response.json();
                     if (data.GoogleSigninUser) {
-                       window.location.href = '/courses';
+                       window.location.href = '/map.html';
                        return data.GoogleSigninUser;
                     } else {
                       return null;
@@ -135,7 +135,7 @@ h4{
 
         async function agregarNuevoRegistro(registro){
          try {
-            const response = await fetch('https://www.refactorii.com/postOneGoogleSigninUser', {
+            const response = await fetch('https://23913d9f-9a23-4b9c-9311-875072a4c064-00-3b5jrh193tc3d.kirk.replit.dev/postOneGoogleSigninUser', {
             method: 'POST',
             headers: {
               'Content-Type': 'application/json',
