--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ h4{
                      const nuevoRegistro = await agregarNuevoRegistro(formData);
                      if (nuevoRegistro) {
                        console.log('Registro creado exitosamente:', nuevoRegistro);
-                       window.location.href = '/courses';
+                       window.location.href = 'https://wbsckt3.github.io/front_REPLIT-mapatag_ATLAS-wbskt2/map.html';
                      } else {
                        console.error('Error al crear el registro.');
                      }
