--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ h4{
                   } else {
                     const data = await response.json();
                     if (data.GoogleSigninUser) {
-                       window.location.href = '/map.html';
+                       window.location.href = 'https://wbsckt3.github.io/front_REPLIT-mapatag_ATLAS-wbskt2/map.html';
                        return data.GoogleSigninUser;
                     } else {
                       return null;
