--- a/map.html
+++ b/map.html
@@ -8,7 +8,7 @@
   <script src="NoSleep.min.js"></script>
   <script src="https://cdn.socket.io/4.5.0/socket.io.min.js" integrity="sha384-7EyYLQZgWBi67fBtVxw60/OWl1kjsfrPFcaU0pp0nAh+i8FD068QogUvg85Ewy1k" crossorigin="anonymous"></script>
 	  
-  <title>CamarasDeFotodeteccion</title>
+  <title>Mappi</title>
 
   <link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
   <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
@@ -50,7 +50,7 @@
   <div id="map"></div>
   <script>
     var greenIcon = L.icon({
-      iconUrl: '/icon.png'
+      iconUrl: 'https://wbsckt3.github.io/front_REPLIT-mapatag_ATLAS-wbskt2/icon.png'
     });
     const options = {
       enableHighAccuracy: true,
