--- a/index.html
+++ b/index.html
@@ -175,9 +175,7 @@ h4{
      data-logo_alignment="left">
     </div>
   </header>
-
-  <img src="image_googlesignin_refactorii.png">
-  <h4></h4>
+  <h4>Ingresa con tu cuenta de Google | sistema de Gerorreferenciación en tiempo real</h4>
 </div>
 <footer>
     <!-- Contenido del pie de página -->
