--- a/index.html
+++ b/index.html
@@ -175,9 +175,11 @@ h4{
      data-logo_alignment="left">
     </div>
   </header>
-  </div>
-  <h4>Ingresa con tu cuenta de Google | sistema de Gerorreferenciación en tiempo real</h4>
 
+  <h4>Ingresa con tu cuenta de Google | Sistema de Georreferenciación en tiempo real</h4>
+
+</div>
+  
 <footer>
     <!-- Contenido del pie de página -->
     Refactorii@2024
