--- a/index.html
+++ b/index.html
@@ -175,11 +175,10 @@ h4{
      data-logo_alignment="left">
     </div>
   </header>
-
-  <h4>Ingresa con tu cuenta de Google | Sistema de Georreferenciación en tiempo real</h4>
-
 </div>
-  
+<div>
+    <h4>Ingresa con tu cuenta de Google | Sistema de Georreferenciación en tiempo real</h4>	
+</div>  
 <footer>
     <!-- Contenido del pie de página -->
     Refactorii@2024
