--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@ header, footer {
   color: #1174ba; /* Ajusta el color del texto para que sea visible en el fondo */
   padding: 10px;
   text-align: center;
-  margin-top: -24px;
-
 }
 
 /*.container {
@@ -62,9 +60,9 @@ footer {
   padding: 32px;
 }
 h4{
-  font-size: 20px;
+  font-size: 23px;
   text-align: center;
-  color: gray;
+  color: #1174ba;
   margin-top: -40px;
 }
 </style>
@@ -190,7 +188,9 @@ h4{
   </header>
 </div>
 <div class="content">
-    <h4>Ingresa con tu cuenta de Google | Sistema de Georreferenciación en tiempo real</h4>	
+    <h1>mappi</h1>	<br><br>
+    <h4>Sistema de Georreferenciación en tiempo real</h4>	
+    <h4>Ingresa con tu cuenta de Google | </h4>	
 </div>  
 <footer>
     <!-- Contenido del pie de página -->
