--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@ h4{
   color: #1174ba;
   margin-top: -40px;
 }
+.content h1,
+.content h4 {
+  display: block;
+}
 </style>
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script>
@@ -188,9 +192,9 @@ h4{
   </header>
 </div>
 <div class="content">
-    <h1>mappi</h1>	<br><br>
+    <h1>mappi</h1>
     <h4>Sistema de Georreferenciación en tiempo real</h4>	
-    <h4>Ingresa con tu cuenta de Google | </h4>	
+    <h4>Ingresa con tu cuenta de Google</h4>	
 </div>  
 <footer>
     <!-- Contenido del pie de página -->
