--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@ h4{
   </header>
 </div>
 <div class="content">
-    <h1>mappi</h1>
-    <h4>Sistema de Georreferenciación en tiempo real</h4>	
-    <h4>Ingresa con tu cuenta de Google</h4>	
+    <p><h1>mappi</h1></p><br><br>
+    <p><h4>Sistema de Georreferenciación en tiempo real</h4></p>
+    <p><h4>Ingresa con tu cuenta de Google</h4></p>	
 </div>  
 <footer>
     <!-- Contenido del pie de página -->
