--- a/index.html
+++ b/index.html
@@ -193,7 +193,11 @@ h4{
 </div>
 <div class="content">
     <p><h1>mappi</h1></p><br><br>
+</div>
+<div class="content">	
     <p><h4>Sistema de Georreferenciación en tiempo real</h4></p>
+</div>
+<div class="content">    
     <p><h4>Ingresa con tu cuenta de Google</h4></p>	
 </div>  
 <footer>
