--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ img {
 footer {
   font-weight: bold;
   padding: 32px;
+  color:#b8bbbd;
 }
 h4{
   font-size: 23px;
@@ -173,6 +174,14 @@ h4{
 <body>
 <div class="container">
   <header>
+    <h1>mappi</h1>
+  </header>
+</div>
+<div class="content">	
+    <p><h2>Sistema de Georreferenciación en tiempo real</h2></p>
+</div>
+<div class="content">    
+    <p><h4>Ingresa con tu cuenta de Google</h4></p>
     <div id="g_id_onload"
      data-client_id="980822676255-vntch0t28qbesul2bp5oc1galtoi8a97.apps.googleusercontent.com"
      data-callback="handleCredentialResponse"
@@ -189,20 +198,10 @@ h4{
      data-size="large"
      data-logo_alignment="left">
     </div>
-  </header>
-</div>
-<div class="content">
-    <p><h1>mappi</h1></p><br><br>
-</div>
-<div class="content">	
-    <p><h4>Sistema de Georreferenciación en tiempo real</h4></p>
-</div>
-<div class="content">    
-    <p><h4>Ingresa con tu cuenta de Google</h4></p>	
 </div>  
 <footer>
     <!-- Contenido del pie de página -->
-    Refactorii@2024
+   Powered by Refactorii@2024
   </footer>
 </body>
 </html>
