--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ h4{
     <p><h2>Sistema de Georreferenciación en tiempo real</h2></p>
 </div>
 <div class="content">    
-    <p><h4>Ingresa con tu cuenta de Google</h4></p>
+    <p><h4>Ingresa con tu cuenta de Google</h4>
     <div id="g_id_onload"
      data-client_id="980822676255-vntch0t28qbesul2bp5oc1galtoi8a97.apps.googleusercontent.com"
      data-callback="handleCredentialResponse"
@@ -197,7 +197,7 @@ h4{
      data-text="signin_with"
      data-size="large"
      data-logo_alignment="left">
-    </div>
+    </div> </p>
 </div>  
 <footer>
     <!-- Contenido del pie de página -->
