--- a/index.html
+++ b/index.html
@@ -182,6 +182,8 @@ h4{
 </div>
 <div class="content">    
     <p><h4>Ingresa con tu cuenta de Google</h4>
+</div>
+<div class="content">  	    
     <div id="g_id_onload"
      data-client_id="980822676255-vntch0t28qbesul2bp5oc1galtoi8a97.apps.googleusercontent.com"
      data-callback="handleCredentialResponse"
@@ -197,7 +199,8 @@ h4{
      data-text="signin_with"
      data-size="large"
      data-logo_alignment="left">
-    </div> </p>
+    </div>
+</div>
 </div>  
 <footer>
     <!-- Contenido del pie de página -->
