--- a/index.html
+++ b/index.html
@@ -201,6 +201,8 @@ h4{
      data-logo_alignment="left">
     </div>
 </div>
+<div class="content"> ---
+</div>
 </div>  
 <footer>
     <!-- Contenido del pie de página -->
