--- a/map.html
+++ b/map.html
@@ -47,7 +47,15 @@
 </head>
 
 <body>
-  <div id="map"></div>
+ <div class="container">
+  <header>
+    <h1>mappi</h1>
+  </header>
+</div>
+<div class="content">	
+    <div id="map"></div>
+</div>
+  
   <script>
     var greenIcon = L.icon({
       iconUrl: 'https://wbsckt3.github.io/front_REPLIT-mapatag_ATLAS-wbskt2/icon.png'
