--- a/map.html
+++ b/map.html
@@ -98,7 +98,7 @@ h4{
 
 </head>
 
-<body onload="showGoogleSigninuser()">
+<body onload="showGoogleSigninUser()">
 
 <div id="map"></div>
 
@@ -208,7 +208,7 @@ h4{
             console.log(msg);
         });
 
-     function showGoogleSigninUser(){
+     var showGoogleSigninUser = function (){
 	     const formData = JSON.parse(localStorage.getItem("formData"));
 	     alert(formData)
      }
