--- a/map.html
+++ b/map.html
@@ -210,7 +210,7 @@ h4{
 
      var showGoogleSigninUser = function (){
 	     const formData = JSON.parse(localStorage.getItem("formData"));
-	     alert(formData)
+	     alert(JSON.stringify(formData, null, 2));
      }
 
   </script>
