--- a/index-admin-gsg.html
+++ b/index-admin-gsg.html
@@ -19,8 +19,8 @@
     }
 
     header {
-      background-color: #333; /* Color de fondo del encabezado */
-      color: #fff; /* Color del texto en el encabezado */
+      background-color: #efefef; /* Color de fondo del encabezado */
+      color: #1174ba; /* Color del texto en el encabezado */
       padding: 10px;
       text-align: center;
     }
