--- a/IndexFirebase.html
+++ b/IndexFirebase.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Google Sign-In</title>
 <script src="https://accounts.google.com/gsi/client" async defer></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-database.js"></script>
 </head>
 <body>
 <div class="container">
@@ -62,13 +64,22 @@ function decodeJwtResponse(token) {
 
 async function getUserByEmail(email) {
     try {
-        const response = await fetch(`https://maxsat.firebase.io/GoogleSigninUser/${email}`, {
+        const response = await fetch(`https://maxsat.firebaseio.com/GoogleSigninUser.json?orderBy="Email"&equalTo="${email}"`, {
             method: 'GET',
             headers: {
                 'Content-Type': 'application/json',
             },
         });
         if (!response.ok) {
+            throw new Error('Error en la solicitud');
+        }
+        const data = await response.json();
+        const userId = Object.keys(data)[0]; // Obtener el ID del usuario si existe
+        if (userId) {
+            // El usuario existe, puedes redirigir o realizar otras acciones necesarias
+            console.log('Usuario encontrado:', data[userId]);
+        } else {
+            // El usuario no existe, intenta agregarlo
             const formData = JSON.parse(localStorage.getItem("formData"));
             const nuevoRegistro = await agregarNuevoRegistro(formData);
             if (nuevoRegistro) {
@@ -77,24 +88,15 @@ async function getUserByEmail(email) {
             } else {
                 console.error('Error al crear el registro.');
             }
-            return null;
-        } else {
-            const data = await response.json();
-            if (data.GoogleSigninUser) {
-                // Aquí puedes redirigir o hacer otras acciones necesarias
-            } else {
-                return null;
-            }
         }
     } catch (error) {
         console.error('Error:', error);
-        return null;
     }
 }
 
 async function agregarNuevoRegistro(registro){
     try {
-        const response = await fetch('https://maxsat.firebase.io/GoogleSigninUser', {
+        const response = await fetch('https://maxsat.firebaseio.com/GoogleSigninUser.json', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
@@ -105,12 +107,13 @@ async function agregarNuevoRegistro(registro){
             throw new Error('Error en la solicitud');
         }
         const data = await response.json();
-        return data.GoogleSigninUser; // Ajusta según la respuesta real del servidor
+        return data.name; // El ID del nuevo registro generado por Firebase
     } catch (error) {
         console.error('Error:', error);
         return null;
     }
 }
+
 </script>
 </body>
 </html>
