--- a/IndexFirebase.html
+++ b/IndexFirebase.html
@@ -64,7 +64,7 @@ function decodeJwtResponse(token) {
 
 async function getUserByEmail(email) {
     try {
-        const response = await fetch(`https://maxsat.firebaseio.com/GoogleSigninUser.json?orderBy="Email"&equalTo="${email}"`, {
+        const response = await fetch(`https://maxsat.firebaseio.com/GoogleSigninUser.json"`, {
             method: 'GET',
             headers: {
                 'Content-Type': 'application/json',
@@ -74,11 +74,11 @@ async function getUserByEmail(email) {
             throw new Error('Error en la solicitud');
         }
         const data = await response.json();
-        const userId = Object.keys(data)[0]; // Obtener el ID del usuario si existe
-        if (userId) {
+        // const userId = Object.keys(data)[0]; // Obtener el ID del usuario si existe
+       /* if (userId) {
             // El usuario existe, puedes redirigir o realizar otras acciones necesarias
             console.log('Usuario encontrado:', data[userId]);
-        } else {
+        } else {*/
             // El usuario no existe, intenta agregarlo
             const formData = JSON.parse(localStorage.getItem("formData"));
             const nuevoRegistro = await agregarNuevoRegistro(formData);
