--- a/IndexFirebase.html
+++ b/IndexFirebase.html
@@ -7,6 +7,7 @@
 <script src="https://accounts.google.com/gsi/client" async defer></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-database.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jwt-decode/3.1.2/jwt-decode.min.js"></script>
 </head>
 <body>
 <div class="container">
