--- a/IndexFirebase.html
+++ b/IndexFirebase.html
@@ -65,34 +65,28 @@ function decodeJwtResponse(token) {
 
 async function getUserByEmail(email) {
     try {
-        const response = await fetch(`https://maxsat.firebaseio.com/GoogleSigninUser.json"`, {
-            method: 'GET',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-        });
-        if (!response.ok) {
-            throw new Error('Error en la solicitud');
-        }
-        const data = await response.json();
-        // const userId = Object.keys(data)[0]; // Obtener el ID del usuario si existe
-       /* if (userId) {
-            // El usuario existe, puedes redirigir o realizar otras acciones necesarias
-            console.log('Usuario encontrado:', data[userId]);
-        } else {*/
-            // El usuario no existe, intenta agregarlo
-            const formData = JSON.parse(localStorage.getItem("formData"));
-            const nuevoRegistro = await agregarNuevoRegistro(formData);
-            if (nuevoRegistro) {
-                alert('Registro creado exitosamente:', nuevoRegistro);
-                // Aquí puedes redirigir o hacer otras acciones necesarias
-            } else {
-                console.error('Error al crear el registro.');
-            }
-        }
-    } catch (error) {
-        console.error('Error:', error);
+    const response = await fetch(`https://maxsat.firebaseio.com/GoogleSigninUser.json`, {
+        method: 'GET',
+        headers: {
+            'Content-Type': 'application/json',
+        },
+    });
+    if (!response.ok) {
+        throw new Error('Error en la solicitud');
     }
+    const data = await response.json();  
+
+    // Convertir el objeto mapa a una lista de objetos
+    const userList = Object.keys(data).map(key => ({
+        id: key, // asignar el identificador único como una nueva propiedad
+        ...data[key] // copiar los datos del objeto original
+    }));
+
+    alert(userList); // Lista de usuarios con identificadores únicos
+} catch (error) {
+    console.error('Error al obtener los usuarios:', error);
+}
+
 }
 
 async function agregarNuevoRegistro(registro){
