--- a/IndexFirebase.html
+++ b/IndexFirebase.html
@@ -63,30 +63,75 @@ function decodeJwtResponse(token) {
     return JSON.parse(jsonPayload);
 }
 
-async function getUserByEmail(email) {
+/* OK
+  async function getUserByEmail(email) {
+  
+      try {
+      const response = await fetch(`https://maxsat.firebaseio.com/GoogleSigninUser.json`, {
+          method: 'GET',
+          headers: {
+              'Content-Type': 'application/json',
+          },
+      });
+      if (!response.ok) {
+          throw new Error('Error en la solicitud');
+      }
+      const data = await response.json();  
+  
+      // Convertir el objeto mapa a una lista de objetos
+      const userList = Object.keys(data).map(key => ({
+          id: key, // asignar el identificador único como una nueva propiedad
+          ...data[key] // copiar los datos del objeto original
+      }));
+  
+      console.log(userList); // Lista de usuarios con identificadores únicos
+  } catch (error) {
+      console.error('Error al obtener los usuarios:', error);
+  }
+
+} */
+
+  async function getUserByEmail(email) {
     try {
-    const response = await fetch(`https://maxsat.firebaseio.com/GoogleSigninUser.json`, {
-        method: 'GET',
-        headers: {
-            'Content-Type': 'application/json',
-        },
-    });
-    if (!response.ok) {
-        throw new Error('Error en la solicitud');
+        const response = await fetch(`https://maxsat.firebaseio.com/GoogleSigninUser.json`, {
+            method: 'GET',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+        });
+        if (!response.ok) {
+            throw new Error('Error en la solicitud');
+        }
+        const data = await response.json();
+
+        // Verificar si el usuario con el correo electrónico dado existe en la base de datos
+        const existingUser = Object.values(data).find(user => user.Email === email);
+        if (existingUser) {
+            // Si el usuario existe, devolver la lista completa de usuarios
+            const userList = Object.keys(data).map(key => ({
+                id: key,
+                ...data[key]
+            }));
+            console.log(userList);
+            return userList;
+        } else {
+            // Si el usuario no existe, agregar un nuevo registro
+            const nuevoRegistro = await agregarNuevoRegistro({
+                FullName: "Nombre Ejemplo",
+                GivenName: "Nombre",
+                FamilyName: "Apellido",
+                FechaIngreso: "2024-04-27",
+                ImageURL: "https://example.com/image.jpg",
+                Email: email
+            });
+            console.log('Nuevo registro creado:', nuevoRegistro);
+            // También puedes devolver la lista completa de usuarios si lo deseas
+            return null;
+        }
+    } catch (error) {
+        console.error('Error al obtener los usuarios:', error);
+        return null;
     }
-    const data = await response.json();  
-
-    // Convertir el objeto mapa a una lista de objetos
-    const userList = Object.keys(data).map(key => ({
-        id: key, // asignar el identificador único como una nueva propiedad
-        ...data[key] // copiar los datos del objeto original
-    }));
-
-    console.log(userList); // Lista de usuarios con identificadores únicos
-} catch (error) {
-    console.error('Error al obtener los usuarios:', error);
-}
-
 }
 
 async function agregarNuevoRegistro(registro){
