--- a/IndexFirebase.html
+++ b/IndexFirebase.html
@@ -49,9 +49,37 @@
 
 <script>
 function handleCredentialResponse(response) {
+    // to decode the credential response.
+    // decodeJwtResponse() is a custom function defined by you
     const responsePayload = decodeJwtResponse(response.credential);
+    console.log("ID: " + responsePayload.sub);
+    console.log('Full Name: ' + responsePayload.name);
+    console.log('Given Name: ' + responsePayload.given_name);
+    console.log('Family Name: ' + responsePayload.family_name);
+    console.log("Image URL: " + responsePayload.picture);
+    console.log("Email: " + responsePayload.email);
     const email = responsePayload.email;
     getUserByEmail(email);
+    const FullName = responsePayload.name;
+	  const GivenName = responsePayload.given_name;
+	  const FamilyName = responsePayload.family_name;
+    const timestampHoy = new Date().getTime();
+    const fechaHoy = new Date(timestampHoy);
+    const year = '1970';
+    const month = '01';
+    const day = '01';
+    const FechaIngreso = `${year}-${month}-${day}`;	   
+    const ImageURL = responsePayload.picture;
+	  const Email = responsePayload.email;
+	  const formData = {
+	      FullName,
+	      GivenName,
+	      FamilyName,
+	      FechaIngreso,
+	      ImageURL,
+	      Email
+	   };
+           localStorage.setItem("formData", JSON.stringify(formData));     
 }
 
 function decodeJwtResponse(token) {
