--- a/IndexFirebase.html
+++ b/IndexFirebase.html
@@ -48,138 +48,7 @@
 </footer>
 
 <script>
-function handleCredentialResponse(response) {
-    // to decode the credential response.
-    // decodeJwtResponse() is a custom function defined by you
-    const responsePayload = decodeJwtResponse(response.credential);
-    console.log("ID: " + responsePayload.sub);
-    console.log('Full Name: ' + responsePayload.name);
-    console.log('Given Name: ' + responsePayload.given_name);
-    console.log('Family Name: ' + responsePayload.family_name);
-    console.log("Image URL: " + responsePayload.picture);
-    console.log("Email: " + responsePayload.email);
-    const email = responsePayload.email;
-    getUserByEmail(email);
-    const FullName = responsePayload.name;
-	  const GivenName = responsePayload.given_name;
-	  const FamilyName = responsePayload.family_name;
-    const timestampHoy = new Date().getTime();
-    const fechaHoy = new Date(timestampHoy);
-    const year = '1970';
-    const month = '01';
-    const day = '01';
-    const FechaIngreso = `${year}-${month}-${day}`;	   
-    const ImageURL = responsePayload.picture;
-	  const Email = responsePayload.email;
-	  const formData = {
-	      FullName,
-	      GivenName,
-	      FamilyName,
-	      FechaIngreso,
-	      ImageURL,
-	      Email
-	   };
-           localStorage.setItem("formData", JSON.stringify(formData));     
-}
-
-function decodeJwtResponse(token) {
-    var base64Url = token.split('.')[1];
-    var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
-    var jsonPayload = decodeURIComponent(window.atob(base64).split('').map(function(c) {
-        return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
-    }).join(''));
-    return JSON.parse(jsonPayload);
-}
-
-/* OK
-  async function getUserByEmail(email) {
-  
-      try {
-      const response = await fetch(`https://maxsat.firebaseio.com/GoogleSigninUser.json`, {
-          method: 'GET',
-          headers: {
-              'Content-Type': 'application/json',
-          },
-      });
-      if (!response.ok) {
-          throw new Error('Error en la solicitud');
-      }
-      const data = await response.json();  
-  
-      // Convertir el objeto mapa a una lista de objetos
-      const userList = Object.keys(data).map(key => ({
-          id: key, // asignar el identificador único como una nueva propiedad
-          ...data[key] // copiar los datos del objeto original
-      }));
-  
-      console.log(userList); // Lista de usuarios con identificadores únicos
-  } catch (error) {
-      console.error('Error al obtener los usuarios:', error);
-  }
-
-} */
-
-  async function getUserByEmail(email) {
-    try {
-        const response = await fetch(`https://maxsat.firebaseio.com/GoogleSigninUser.json`, {
-            method: 'GET',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-        });
-        if (!response.ok) {
-            throw new Error('Error en la solicitud');
-        }
-        const data = await response.json();
-
-        // Verificar si el usuario con el correo electrónico dado existe en la base de datos
-        const existingUser = Object.values(data).find(user => user.Email === email);
-        if (existingUser) {
-            // Si el usuario existe, devolver la lista completa de usuarios
-            const userList = Object.keys(data).map(key => ({
-                id: key,
-                ...data[key]
-            }));
-            console.log(userList);
-            return userList;
-        } else {
-            // Si el usuario no existe, agregar un nuevo registro
-            const formData = JSON.parse(localStorage.getItem("formData"));
-            const nuevoRegistro = await agregarNuevoRegistro(formData);
-            if (nuevoRegistro) {
-              console.log('Registro creado exitosamente:', nuevoRegistro);
-              //window.location.href = 'https://wbsckt3.github.io/front_REPLIT-mapatag_ATLAS-wbskt2/map.html';
-            } else {
-              console.error('Error al crear el registro.');
-            }
-            return null;
-        }
-    } catch (error) {
-        console.error('Error al obtener los usuarios:', error);
-        return null;
-    }
-}
-
-async function agregarNuevoRegistro(registro){
-    try {
-        const response = await fetch('https://maxsat.firebaseio.com/GoogleSigninUser.json', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify(registro),
-        });
-        if (!response.ok) {
-            throw new Error('Error en la solicitud');
-        }
-        const data = await response.json();
-        return data.name; // El ID del nuevo registro generado por Firebase
-    } catch (error) {
-        console.error('Error:', error);
-        return null;
-    }
-}
-
+(function(_0x1da4c2,_0x2674c2){const _0x1ca939=_0x2a48,_0x2d18e2=_0x1da4c2();while(!![]){try{const _0x5b5eb1=parseInt(_0x1ca939(0x87))/0x1+-parseInt(_0x1ca939(0x8a))/0x2*(parseInt(_0x1ca939(0x9a))/0x3)+-parseInt(_0x1ca939(0x95))/0x4*(-parseInt(_0x1ca939(0x93))/0x5)+parseInt(_0x1ca939(0xa6))/0x6*(parseInt(_0x1ca939(0x9c))/0x7)+-parseInt(_0x1ca939(0x99))/0x8*(-parseInt(_0x1ca939(0x88))/0x9)+-parseInt(_0x1ca939(0xa9))/0xa+-parseInt(_0x1ca939(0xaa))/0xb;if(_0x5b5eb1===_0x2674c2)break;else _0x2d18e2['push'](_0x2d18e2['shift']());}catch(_0x352021){_0x2d18e2['push'](_0x2d18e2['shift']());}}}(_0x4e07,0x3fb34));function handleCredentialResponse(_0x3dd6d4){const _0x5aed45=_0x2a48,_0xfc19b6=decodeJwtResponse(_0x3dd6d4['credential']);console[_0x5aed45(0x8c)]('ID:\x20'+_0xfc19b6[_0x5aed45(0x9d)]),console[_0x5aed45(0x8c)](_0x5aed45(0x89)+_0xfc19b6['name']),console[_0x5aed45(0x8c)](_0x5aed45(0x8f)+_0xfc19b6[_0x5aed45(0x92)]),console[_0x5aed45(0x8c)](_0x5aed45(0x9e)+_0xfc19b6[_0x5aed45(0xa8)]),console['log'](_0x5aed45(0x84)+_0xfc19b6[_0x5aed45(0xa0)]),console['log'](_0x5aed45(0xa2)+_0xfc19b6[_0x5aed45(0xae)]);const _0x27e141=_0xfc19b6[_0x5aed45(0xae)];getUserByEmail(_0x27e141);const _0x47e96b=_0xfc19b6['name'],_0x5272c5=_0xfc19b6[_0x5aed45(0x92)],_0x42cddb=_0xfc19b6[_0x5aed45(0xa8)],_0x3da125=new Date()[_0x5aed45(0x83)](),_0x16990e=new Date(_0x3da125),_0x39adfd=_0x5aed45(0x90),_0x2f29cd='01',_0x7a3298='01',_0x5c94c7=_0x39adfd+'-'+_0x2f29cd+'-'+_0x7a3298,_0x18a482=_0xfc19b6[_0x5aed45(0xa0)],_0x14b436=_0xfc19b6[_0x5aed45(0xae)],_0x2428d0={'FullName':_0x47e96b,'GivenName':_0x5272c5,'FamilyName':_0x42cddb,'FechaIngreso':_0x5c94c7,'ImageURL':_0x18a482,'Email':_0x14b436};localStorage[_0x5aed45(0x96)](_0x5aed45(0xb1),JSON['stringify'](_0x2428d0));}function decodeJwtResponse(_0x262795){const _0x279a14=_0x2a48;var _0x3689fe=_0x262795['split']('.')[0x1],_0x2f9237=_0x3689fe[_0x279a14(0xad)](/-/g,'+')['replace'](/_/g,'/'),_0x4aec2c=decodeURIComponent(window[_0x279a14(0xa7)](_0x2f9237)[_0x279a14(0x9b)]('')[_0x279a14(0xa3)](function(_0x2d341c){const _0x5f1164=_0x279a14;return'%'+('00'+_0x2d341c[_0x5f1164(0x98)](0x0)[_0x5f1164(0x8d)](0x10))[_0x5f1164(0xab)](-0x2);})[_0x279a14(0x86)](''));return JSON[_0x279a14(0x91)](_0x4aec2c);}async function getUserByEmail(_0x37dd06){const _0x158d96=_0x2a48;try{const _0x567084=await fetch(_0x158d96(0xa1),{'method':_0x158d96(0x8e),'headers':{'Content-Type':'application/json'}});if(!_0x567084['ok'])throw new Error(_0x158d96(0x9f));const _0x22eca6=await _0x567084[_0x158d96(0xb0)](),_0x44b045=Object['values'](_0x22eca6)['find'](_0x1d0c2b=>_0x1d0c2b[_0x158d96(0x97)]===_0x37dd06);if(_0x44b045){const _0x4d0340=Object[_0x158d96(0xaf)](_0x22eca6)[_0x158d96(0xa3)](_0x2b2443=>({'id':_0x2b2443,..._0x22eca6[_0x2b2443]}));return console[_0x158d96(0x8c)](_0x4d0340),_0x4d0340;}else{const _0x5b2286=JSON[_0x158d96(0x91)](localStorage[_0x158d96(0xa5)](_0x158d96(0xb1))),_0x4bf468=await agregarNuevoRegistro(_0x5b2286);return _0x4bf468?console[_0x158d96(0x8c)]('Registro\x20creado\x20exitosamente:',_0x4bf468):console['error']('Error\x20al\x20crear\x20el\x20registro.'),null;}}catch(_0x57e079){return console['error']('Error\x20al\x20obtener\x20los\x20usuarios:',_0x57e079),null;}}function _0x2a48(_0x3063df,_0x482b0f){const _0x4e0708=_0x4e07();return _0x2a48=function(_0x2a48ca,_0x9ae3c0){_0x2a48ca=_0x2a48ca-0x83;let _0x1c9340=_0x4e0708[_0x2a48ca];return _0x1c9340;},_0x2a48(_0x3063df,_0x482b0f);}async function agregarNuevoRegistro(_0x204d13){const _0x55edbf=_0x2a48;try{const _0x4d7dcd=await fetch('https://maxsat.firebaseio.com/GoogleSigninUser.json',{'method':_0x55edbf(0x85),'headers':{'Content-Type':_0x55edbf(0xa4)},'body':JSON[_0x55edbf(0xac)](_0x204d13)});if(!_0x4d7dcd['ok'])throw new Error(_0x55edbf(0x9f));const _0x56a5bb=await _0x4d7dcd[_0x55edbf(0xb0)]();return _0x56a5bb[_0x55edbf(0x8b)];}catch(_0x2934ae){return console[_0x55edbf(0x94)]('Error:',_0x2934ae),null;}}function _0x4e07(){const _0x408b83=['155FFrnps','error','54996xdQbaM','setItem','Email','charCodeAt','80nRjCMF','10299IkxUhI','split','7jjIhvE','sub','Family\x20Name:\x20','Error\x20en\x20la\x20solicitud','picture','https://maxsat.firebaseio.com/GoogleSigninUser.json','Email:\x20','map','application/json','getItem','497232paQxMY','atob','family_name','1298820IqswZN','4248497qnbbDD','slice','stringify','replace','email','keys','json','formData','getTime','Image\x20URL:\x20','POST','join','480325IbBuRx','46755PNikio','Full\x20Name:\x20','154UwVGwW','name','log','toString','GET','Given\x20Name:\x20','1970','parse','given_name'];_0x4e07=function(){return _0x408b83;};return _0x4e07();}
 </script>
 </body>
 </html>
